[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polytracker"
version = "1.1.0"
description = "Telegram bot that tracks Polymarket wallets in real-time"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "python-telegram-bot[job-queue]>=20.0,<23.0",
    "httpx>=0.23.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.3.0,<1.0.0",
    "mypy>=1.8,<2.0",
]

[project.scripts]
polytracker = "polytracker.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
